--- a/Taxonomie_(biologie).mw
+++ b/Taxonomie_(biologie).mw
@@ -554,7 +554,7 @@ Afsproakn vo de SV categoriebenoamiengn:
 |}
 
 
-===Stamme: [[Oltebeestn]]===
+===Stamme: [[Oltebêestn]]===
 
 ====Klasse: [[Scyphosa]]====
 
@@ -563,8 +563,8 @@ Afsproakn vo de SV categoriebenoamiengn:
 ! Stamme !! Ounderstamme !! Klasse !! Ounderklasse !! Orde !! Ounderorde !! Familie !! Geslacht !! Sorte: typevoorbeeld || Wiki-categorieën
 |-
 <!-- STAMME ------------------------------ -->
-| colspan = "9" |  [[Oltebeestn]] ([[Cnidaria]])
-| [[:Categorie:Oltebeeste|Oltebeeste]] 
+| colspan = "9" |  [[Oltebêestn]] ([[Cnidaria]])
+| [[:Categorie:Oltebêeste|Oltebêeste]] 
 |-
 
 <!-- ---------------- KLASSE ------------------------------- -->
@@ -609,7 +609,7 @@ Afsproakn vo de SV categoriebenoamiengn:
 
 |}
 
-===Stamme: [[Wêekbêest'n]]===
+===Stamme: [[Wêekbêestn]]===
 
 ====Klasse: [[Twêekleppigen]]====
 
