+ consistentie met effectief bestoande categoriën

--- a/Taxonomie_(biologie).mw
+++ b/Taxonomie_(biologie).mw
@@ -18,7 +18,7 @@ Afsproakn vo de SV categoriebenoamiengn:
 |-
 <!-- STAMME ------------------------------ -->
 | colspan = "9" | [[Chordabêestn]] ([[Chordata]])
-| [[:Categorie:Chordabêeste|Chordabêeste]] 
+| [[:Categorie:Chordadier|Chordabêeste]] 
 |-
 
 <!-- ---------------- KLASSE ------------------------------- -->
@@ -81,7 +81,7 @@ Afsproakn vo de SV categoriebenoamiengn:
 
 <!-- STAMME ------------------------------ -->
 | colspan = "8" | [[Chordabêestn]] ([[Chordata]])
-| [[:Categorie:Chordabêeste|Chordabêeste]] 
+| [[:Categorie:Chordadier|Chordabêeste]] 
 |-
 
 <!-- ---------------- KLASSE ------------------------------- -->
@@ -325,7 +325,7 @@ Afsproakn vo de SV categoriebenoamiengn:
 
 <!-- ------------------------------- ORDE ----------------------------------- -->
 | || || || || colspan = "5" | [[Vlêeseters]] ([[Carnivora]])
-| [[:Categorie:Vleeseter|Vlêeseter]] 
+| [[:Categorie:Roofdier|Vlêeseter]] 
 |-
 
 <!-- ------------------------------------------------ FAMILIE + GESLACHT + SORTE ---------- -->
