/* Klasse: Veugels */  +Steltloperachtigen

--- a/Taxonomie_(biologie).mw
+++ b/Taxonomie_(biologie).mw
@@ -110,6 +110,19 @@ Afsproakn vo de SV categoriebenoamiengn:
 |-
 
 <!-- ------------------------------- ORDE ----------------------------------- -->
+| || || || colspan = "5" | [[Ôoievoarachtigen]] ([[Ciconiiformes]])
+| [[:Categorie:Ôoievoarachtige|Ôoievoarachtige]] 
+|-
+
+<!-- ------------------------------------------------ FAMILIE + GESLACHT + SORTE ----------- -->
+| || || || ||
+| [[Reigers en roerdompn]] ([[Ardeidae]]) 
+| [[Ardea]]
+| [[Blauwn reiger]]
+| [[:Categorie:Reiger of roerdompe|Reiger of roerdompe]], [[:Categorie:Ardea|Ardea]]
+|-
+
+<!-- ------------------------------- ORDE ----------------------------------- -->
 | || || || colspan = "5" | [[Rôofveugels]] ([[Falconiformes]])
 | [[:Categorie:Rôofveugel|Rôofveugel]] 
 |-
@@ -131,16 +144,16 @@ Afsproakn vo de SV categoriebenoamiengn:
 |-
 
 <!-- ------------------------------- ORDE ----------------------------------- -->
-| || || || colspan = "5" | [[Ôoievoarachtigen]] ([[Ciconiiformes]])
+| || || || colspan = "5" | [[Steltloperachtigen]] ([[Charadriiformes]])
 | [[:Categorie:Ôoievoarachtige|Ôoievoarachtige]] 
 |-
 
 <!-- ------------------------------------------------ FAMILIE + GESLACHT + SORTE ----------- -->
 | || || || ||
-| [[Reigers en roerdompn]] ([[Ardeidae]]) 
-| [[Ardea]]
-| [[Blauwn reiger]]
-| [[:Categorie:Reiger of roerdompe|Reiger of roerdompe]], [[:Categorie:Ardea|Ardea]]
+| [[Mêeuwn]] ([[Laridae]]) 
+| [[Larus]]
+| [[Zilvermêeuwe]]
+| [[:Categorie:Mêeuwe|Mêeuwe]], [[:Categorie:Larus|Larus]]
 |-
 
 <!-- ------------------------------- ORDE ----------------------------------- -->
