/* Klasse: Veugels */ cat.ev.

--- a/Taxonomie_(biologie).mw
+++ b/Taxonomie_(biologie).mw
@@ -140,7 +140,7 @@ Afsproakn vo de SV categoriebenoamiengn:
 | [[Oavikachtign]] ([[Accipitridae]]) 
 | [[Accipiter]]
 | [[Sperwer]]
-| [[:Categorie:Oavikachtign|Oavikachtign]], [[:Categorie:Accipiter|Accipiter]] 
+| [[:Categorie:Oavikachtige|Oavikachtige]], [[:Categorie:Accipiter|Accipiter]] 
 |-
 
 <!-- ------------------------------- ORDE ----------------------------------- -->
